--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body onload="loading()">
     <div id="loading"></div>
-    <div class="container" id="afterload">
+    <div class="container">
       <div class="quotes">
         <div class="user">
           <img src="./Picture/profile.jpeg" alt="profile" id="profile" />
